--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
 	"type": "module",
 	"dependencies": {
 		"@11ty/eleventy": "^3.1.2",
+		"markdown-it-anchor": "^9.2.0",
+		"markdown-it-attrs": "^4.3.1",
 		"markdown-it-container": "^4.0.0"
 	}
 }
