--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
 		"markdown-it-anchor": "^9.2.0",
 		"markdown-it-attrs": "^4.3.1",
 		"markdown-it-container": "^4.0.0"
+	},
+	"devDependencies": {
+		"@11ty/eleventy-plugin-rss": "^2.0.4"
 	}
 }
