--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	"type": "module",
 	"dependencies": {
 		"@11ty/eleventy": "^3.1.2",
+		"@11ty/parse-date-strings": "^2.0.6",
 		"html-minifier-next": "^4.19.1",
+		"luxon": "^3.7.2",
 		"markdown-it-anchor": "^9.2.0",
 		"markdown-it-attrs": "^4.3.1",
 		"markdown-it-container": "^4.0.0"
